--- a/DEprop/DEprop.csproj
+++ b/DEprop/DEprop.csproj
@@ -73,22 +73,12 @@
     <Compile Include="AnswersAdd.xaml.cs">
       <DependentUpon>AnswersAdd.xaml</DependentUpon>
     </Compile>
-    <Compile Include="AnswersMenu.xaml.cs">
-      <DependentUpon>AnswersMenu.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="ChapterPage.xaml.cs">
-      <DependentUpon>ChapterPage.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Chapters.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="ChaptersAdd.xaml.cs">
       <DependentUpon>ChaptersAdd.xaml</DependentUpon>
     </Compile>
-    <Compile Include="ChaptersMenu.xaml.cs">
-      <DependentUpon>ChaptersMenu.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="ConcatConverter.cs" />
     <Compile Include="Model1.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -97,14 +87,17 @@
     <Compile Include="ModeratorAnswersAddPage.xaml.cs">
       <DependentUpon>ModeratorAnswersAddPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ModeratorChapterAddPage.xaml.cs">
+      <DependentUpon>ModeratorChapterAddPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ModeratorTestsAddPage.xaml.cs">
+      <DependentUpon>ModeratorTestsAddPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ModeratorUsersAddPage.xaml.cs">
       <DependentUpon>ModeratorUsersAddPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="ModeratorWindow.xaml.cs">
       <DependentUpon>ModeratorWindow.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="ModMenu.xaml.cs">
-      <DependentUpon>ModMenu.xaml</DependentUpon>
     </Compile>
     <Compile Include="Mods.cs">
       <DependentUpon>Model1.tt</DependentUpon>
@@ -121,17 +114,11 @@
     <Compile Include="TestEsts.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="TestEstsHub.xaml.cs">
-      <DependentUpon>TestEstsHub.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Tests.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="TestsAdd.xaml.cs">
       <DependentUpon>TestsAdd.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="TestsHub.xaml.cs">
-      <DependentUpon>TestsHub.xaml</DependentUpon>
     </Compile>
     <Compile Include="UserAdd.xaml.cs">
       <DependentUpon>UserAdd.xaml</DependentUpon>
@@ -142,23 +129,14 @@
     <Compile Include="Users.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="UserWindow.xaml.cs">
+      <DependentUpon>UserWindow.xaml</DependentUpon>
+    </Compile>
     <Page Include="AnswersAdd.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="AnswersMenu.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="ChapterPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="ChaptersAdd.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="ChaptersMenu.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -178,6 +156,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="ModeratorChapterAddPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ModeratorTestsAddPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="ModeratorUsersAddPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -186,23 +172,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="ModMenu.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="Profile.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="TestEstsHub.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="TestsAdd.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="TestsHub.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -211,6 +185,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UserHub.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
